# neural-nets-framework

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
examples/: binary-mnist-classification.py  mnist-classification.py
src/core/: dataloader.py  dataset.py  functions.py  layers.py  logger.py  metrics.py  model.py  pca.py  trainer.py  transforms.py
tests/core/: test_compare_against_pytorch.py  test_model.py
