[tool.poetry]
name = "neural-nets-framework"
version = "0.1.0"
description = "My own custom implementation of a neural network framework"
authors = ["Patrick Strasser <strasserpatrick@outlook.de>"]
readme = "README.md"
packages = [{include = "neural_nets_framework"}]

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.7.1"
numpy = "^1.24.3"
pandas = "^2.0.2"
pydantic = "^1.10.8"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
isort = "^5.12.0"
pyproject-flake8 = "^6.0.0.post1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
